# AI-Naku-Stratpoint-Web-QnA

./: .dockerignore  .envexample  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.bat  run.ps1  run.sh  stratpoint_rag_prompt.md
RAG-UnitTests/: test_f1_f2_f3_fixes.py
data/: index.jsonl  run_report.json
data/pages/: 2017__04__06__stratpoint-ceo-attends-the-17th-philippine-computing-science-congress-in-cebu.md  2018__12__19__industrie-4-0-and-higher-education.md  2018__12__20__narra-group-of-companies-welcomes-mantua-consulting.md  2018__12__31__stratpoint-becomes-an-aws-advanced-consulting-partner.md  2019__07__08__women-of-stratpoint-proclaimed-grand-champion-at-the-2nd-developher.md  2019__07__11__stratpoint-goes-to-mapua-for-series-of-talks-to-graduating-students.md  2020__09__29__solaire-resort-and-casino-managed-services.md  2020__09__30__golds-gym-japan-migration.md  2020__09__30__serverless-using-aws-lambda.md  2020__10__01__cary-santos-agile-mover.md  2020__11__25__stratpoint-wins-aws-2020-social-impact-partner-of-the-year-award.md  2021__02__08__stratpoint-partners-with-outsystems.md  2021__03__05__in-the-news-phs-cloud-adoption-rapidly-growing-in-2021.md  2021__03__10__in-the-news-demand-for-cloud-services-seen-rising-in-2021.md  2021__03__19__outsystems-for-app-development-stratpoint-blog.md  2021__03__29__more-women-should-be-in-it.md  2021__04__07__stratpoint-is-proud-to-be-pinoy.md  2021__04__11__going-agile-is-like-mountain-biking.md  2021__04__30__finding-flutter-our-cross-platform-journey.md  2021__05__19__apps-stratpoint-built-fast-and-right-on-outsystems.md  2021__05__28__6-months-to-develop-an-app-is-too-long.md  2021__06__04__is-it-time-to-get-on-the-low-code-train.md  2021__06__10__whats-the-fuss-about-software-factories.md  2021__06__25__software-factory-best-practices.md  2021__07__02__build-your-first-mobile-application.md  2021__07__09__what-is-not-agile.md  2021__07__15__in-the-news-how-cloud-technology-helps-companies.md  2021__07__16__so-what-is-an-mvp.md  2021__07__23__computer-vision-possibilities-as-far-as-we-can-see.md  2021__07__29__cross-functional-collaboration-in-application-development.md  2021__08__05__stratpoint-ceo-recognized-in-channel-asias-2021-women-in-ict-awards.md  2021__08__12__security-best-practices-for-mobile-app-development.md  (+339 more)
docker/: entrypoint.sh
docs/: INPUTHERE_self-log.md  KEISHA_self-log.md  MIKHOS_self-log.md  Mikhos_self-log.md  VIENN_self-log.md  architecture-flow.md  general-log.md  test-results.md
tests/: test_agent_deps.py  test_agent_integration.py  test_agent_reasoning_wiring.py  test_agent_result.py  test_agent_runner.py  test_agent_tools.py  test_answer_reasoning.py  test_answer_stream.py  test_api.py  test_api_client.py  test_chunker.py  test_cli.py  test_config.py  test_crawler.py  test_disambiguation.py  test_extract.py  test_guardrail_agent.py  test_guardrails.py  test_integration.py  test_models.py  test_prompts_schema.py  test_resource_fetch.py  test_retrieval_grounding.py  test_sitemap.py  test_sitemap_fetch.py  test_state.py  test_storage.py
(+81 files in other folders)
