[project]
name = "stratpoint-rag"
version = "0.1.0"
description = "RAG chatbot for stratpoint.com: crawler, retrieval pipeline, agent, API, and chat UI."
authors = [
    { name = "Dattebayo2505", email = "seankyled1st@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "lxml>=6.1.1",
    "markdownify>=1.2.2",
    "playwright>=1.60.0",
    "pydantic>=2.13.4",
    "selectolax>=0.4.10",
    "tenacity>=9.1.4",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
]

[project.scripts]
stratpoint-crawler = "stratpoint_crawl.cli:main"
stratpoint-rag-ingest = "stratpoint_rag.rag.ingest:main"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = ["stratpoint_crawl", "stratpoint_rag"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "RAG-UnitTests"]
markers = ["integration: hits the live network (deselected by default)"]
addopts = "-m 'not integration'"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "respx>=0.23.1",
]
